versioned_docs/version-2.10.0/platforms/mac.mdx
---
sidebar_class_name: hidden
---

# macOS

:::danger
This platform is in beta and not ready for production use.
:::

Zaparoo Core on macOS supports shell script launching. Full launcher support is coming in a future release.

## File Paths

| Item               | Path                                             |
| ------------------ | ------------------------------------------------ |
| Config file        | `~/Library/Preferences/zaparoo/config.toml`      |
| Data directory     | `~/Library/Application Support/zaparoo`          |
| Log file           | `~/Library/Logs/zaparoo/core.log`                |
| Mappings directory | `~/Library/Application Support/zaparoo/mappings` |

Where `~` is the home directory of the current user.

## Install

Download Zaparoo Core for macOS from the [Downloads page](/downloads/), unzip it and copy the `zaparoo` file to `/usr/local/bin`.

```bash
cd /usr/local/bin
./zaparoo -install
launchctl load ~/Library/LaunchAgents/org.zaparoo.core.plist
```

To uninstall:

```bash
./zaparoo -uninstall
```

## Readers

All [readers](../readers/index.md) are supported except ACR122U and Optical Drive.

## Supported Launchers

| Launcher      | Notes                        |
| ------------- | ---------------------------- |
| Shell Scripts | Custom `.sh` file execution  |

Create shell scripts to launch games, applications, or media. Add scripts to the `allow_file` list in config.toml and restart Zaparoo.
