versioned_docs/version-2.11.0/platforms/mac.mdx
---
sidebar_class_name: hidden
description: "Zaparoo Core on macOS: early access platform support for NFC game launching on Mac."
---

# macOS

:::danger
This platform is in beta and not ready for production use.
:::

Zaparoo Core on macOS supports shell script launching. Full launcher support is coming in a future release.

## File Paths

| Item               | Path                                             |
| ------------------ | ------------------------------------------------ |
| Config file        | `~/Library/Preferences/zaparoo/config.toml`      |
| Data directory     | `~/Library/Application Support/zaparoo`          |
| Log file           | `~/Library/Logs/zaparoo/core.log`                |
| Mappings directory | `~/Library/Application Support/zaparoo/mappings` |

Where `~` is the home directory of the current user.

## Install

Download Zaparoo Core for macOS from the [Downloads page](/downloads/), unzip it and copy the `zaparoo` file to `/usr/local/bin`.

```bash
cd /usr/local/bin
./zaparoo -install
launchctl load ~/Library/LaunchAgents/org.zaparoo.core.plist
```

To uninstall:

```bash
./zaparoo -uninstall
```

## Readers

<ReaderSupport
  groups={[
    {
      name: "NFC/RFID",
      readers: [
        { name: "PN532 USB", href: "../readers/nfc/pn532-usb", support: "supported", setup: "Auto-detected" },
        { name: "PN532 Module", href: "../readers/nfc/pn532-module", support: "supported", setup: "Depends on wiring", note: "UART can auto-detect. I2C is supported." },
        { name: "ACR122U", href: "../readers/nfc/acr122u", support: "unsupported", note: "Not included in the current macOS Core reader set." },
        { name: "RC522", href: "../readers/nfc/rc522", support: "limited", setup: "Via Simple Serial", note: "Requires a microcontroller; not a direct USB reader." },
      ],
    },
    {
      name: "Barcode and QR",
      readers: [
        { name: "App/Camera Scanner", href: "../app/", support: "supported", setup: "Via Zaparoo App" },
        { name: "RS232 Scanner", href: "../readers/barcode/rs232", support: "supported", setup: "Manual config" },
      ],
    },
    {
      name: "Optical and Media",
      readers: [
        { name: "Optical Drive", href: "../readers/optical-drive", support: "unsupported", note: "Linux only" },
        { name: "External Drive", href: "../readers/external-drive", support: "supported", setup: "Manual enable" },
      ],
    },
    {
      name: "Custom and Virtual",
      readers: [
        { name: "MQTT Reader", href: "../readers/mqtt", support: "supported", setup: "Manual config" },
        { name: "Simple Serial", href: "../readers/simple-serial", support: "supported", setup: "Manual config" },
        { name: "File Reader", href: "../readers/file", support: "supported", setup: "Manual config" },
      ],
    },
    {
      name: "Displays and Integrations",
      readers: [
        { name: "TTY2OLED", href: "../readers/tty2oled", support: "supported", setup: "Manual enable" },
      ],
    },
  ]}
/>

## Supported Launchers

| Launcher      | Notes                        |
| ------------- | ---------------------------- |
| Shell Scripts | Custom `.sh` file execution  |

Create shell scripts to launch games, applications, or media. Add scripts to the `allow_file` list in config.toml and restart Zaparoo.
